fix(ReadMoreButton): better name fix(ProductDescription): using icons from figma fix(package.json): remove react-icons

--- a/packages/client/src/components/shared/ReadMoreButton/ReadMoreButton.styles.css
+++ b/packages/client/src/components/shared/ReadMoreButton/ReadMoreButton.styles.css
@@ -1,15 +1,13 @@
-.changeable-button {
+.read-more-button {
   display: flex;
   align-items: center;
   background: none;
   border: none;
   font-size: 24px;
 }
-
-.changeable-button:hover {
+.read-more-button:hover {
   cursor: pointer;
 }
-
-.changeable-button button svg {
+.read-more-button button svg {
   font-size: 30px;
 }
