feature(ProductView): Styling WITHOUT responsiveness

--- a/packages/client/src/containers/DropdownGroup/DropdownGroup.Style.css
+++ b/packages/client/src/containers/DropdownGroup/DropdownGroup.Style.css
@@ -1,6 +1,6 @@
-.dropdown-group {
-  margin-bottom: 15px;
-}
-.dropdown-list {
-  background-color: #e4c1b1;
+.dropdown-group-list {
+  margin-bottom: 83px;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
 }
