--- a/packages/client/src/components/ProductImage/ProductImage.styles.css
+++ b/packages/client/src/components/ProductImage/ProductImage.styles.css
@@ -1,10 +1,23 @@
 .product-image-wrapper {
-  border: 2px solid #cea086;
-  width: 50%;
+  grid-column: 1 / span 7;
   display: flex;
-  justify-content: center;
-  column-gap: 1rem;
-  line-height: 2rem;
-  padding-top: 10px;
-  background-color: #cea086;
+  gap: 66px;
+}
+
+.product-image-wrapper img {
+  display: block;
+}
+
+.product-image-left-picture {
+  display: flex;
+  flex-direction: column;
+  gap: 31px;
+}
+
+.product-image-left-picture img {
+  width: 222px;
+}
+
+.product-image-right-picture img {
+  width: 364px;
 }
