--- a/packages/client/src/components/ViewDropDown/ViewDropdown.styles.css
+++ b/packages/client/src/components/ViewDropDown/ViewDropdown.styles.css
@@ -1,12 +1,19 @@
-.dropdown-label {
-  font-size: 18px;
+.view-dropdown-wrapper {
+  margin-bottom: 83px;
+}
+
+.view-dropdown-label {
+  font-size: 32px;
+  font-weight: 600;
   width: 20px;
 }
 
-.dropdown-select {
-  width: 120px;
-  height: 30px;
-  font-size: 12px;
-  margin-top: 10px;
+.view-dropdown-select {
+  margin-top: 19px;
+  width: 331px;
+  padding: 23px 12px 27px 12px;
+  font-size: 24px;
+  font-weight: 600;
+  color: #212121cc;
   background-color: #e4c1b1;
 }
