--- a/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
+++ b/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
@@ -1,9 +1,10 @@
-.viewPage-button {
+.view-page-button {
+  width: 331px;
+  padding: 20px 0;
   border-radius: 100px;
-  width: 150px;
-  height: 50px;
-  border: 0;
-  color: '#212121';
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  color: #212121;
   font-family: 'Montserrat';
-  font-size: 18px;
+  font-size: 32px;
+  font-weight: 600;
 }
