--- a/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
+++ b/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
@@ -4,6 +4,8 @@
   background: none;
   border: none;
   font-size: 24px;
+  font-weight: 600;
+  color: rgba(33, 33, 33, 0.8);
 }
 .go-back-button:hover {
   cursor: pointer;
