--- a/packages/client/src/components/ProductList/ProductList.component.css
+++ b/packages/client/src/components/ProductList/ProductList.component.css
@@ -1,16 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  background-color: rgba(228, 193, 177, 1);
+.collection-page-container {
+  background-color: #ececec;
   margin: auto;
+  width: 1512px;
+}
+.product-list-container {
+  background-color: rgba(228, 193, 177, 1);
+  margin-bottom: 50px;
 }
 .rendered-product {
-  margin: 200px 100px;
+  padding: 24px 72px;
   justify-content: center;
-  position: absolute;
   display: flex;
   flex-wrap: wrap;
 }
@@ -20,11 +25,79 @@ body {
   margin: 15px 10px;
 }
 .product img {
-  width: 333px;
+  object-fit: cover;
+  width: 100%;
   height: 333px;
 }
 .product p {
   color: black;
   text-align: left;
   padding: 10px;
+  font-family: Montserrat;
+}
+@media only screen and (max-width: 1200px) {
+  .collection-page-container {
+    margin: auto;
+    width: 1200px;
+  }
+  .rendered-product {
+    padding: 10px 25px;
+  }
+  .product {
+    width: 303px;
+    height: 403px;
+  }
+  .product img {
+    height: 303px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .collection-page-container {
+    margin: auto;
+    width: 990px;
+  }
+  .rendered-product {
+    padding: 10px;
+  }
+  .product {
+    width: 233px;
+    height: 333px;
+  }
+  .product img {
+    height: 233px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .collection-page-container {
+    margin: auto;
+    width: 768px;
+  }
+  .rendered-product {
+    padding: 20px;
+  }
+  .product {
+    width: 293px;
+    height: 393px;
+    margin: 10px 10px;
+  }
+  .product img {
+    height: 293px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .collection-page-container {
+    margin: auto;
+    width: 600px;
+  }
+  .rendered-product {
+    padding: 10px 0px;
+  }
+  .product {
+    width: 233px;
+    height: 333px;
+    margin: 10px 10px;
+  }
+  .product img {
+    height: 233px;
+  }
 }
