--- a/packages/client/src/components/Header/Header.styles.css
+++ b/packages/client/src/components/Header/Header.styles.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: top;
   justify-content: space-between;
-  border: 1px solid red;
   height: 100%;
 }
 
@@ -34,12 +33,12 @@
   flex: 0 0 50%;
   width: 100%;
   height: 100%;
-  padding-left: 20px;
-  border: 1px solid blue;
+  text-align: right;
+  overflow: auto;
 }
 
 .header-image img {
-  max-width: 100%;
+  max-width: 95%;
   max-height: 100%;
 }
 
@@ -56,11 +55,9 @@
   .header-text {
     text-align: center;
   }
-  .header-text {
-    margin-bottom: 20px;
-  }
   .header-image {
     padding: 0;
+    text-align: center;
   }
 }
 
@@ -77,10 +74,11 @@
   .header-text {
     text-align: center;
   }
-  .header-text {
-    margin-bottom: 20px;
-  }
   .header-image {
     padding: 0;
+  }
+  .header-image img {
+    max-width: 85%;
+    margin-top: 20px;
   }
 }
