--- a/packages/client/src/components/Footer/Footer.styles.css
+++ b/packages/client/src/components/Footer/Footer.styles.css
@@ -71,10 +71,8 @@ h4 {
 .col h4 {
   font-family: 'Montserrat', sans-serif;
 }
-.icon {
-  height: 28px;
-  width: 38px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+.icon-footer {
+  width: 25%;
   cursor: pointer;
   position: relative;
 }
@@ -101,6 +99,9 @@ h4 {
     padding-bottom: 0px;
     font-size: 12px;
   }
+  .icon-footer {
+    width: 20%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -124,11 +125,17 @@ h4 {
   }
   .col,
   h4 {
-    padding-bottom: 0px;
+    margin-bottom: 5px;
     font-size: 16px;
   }
   .row div:nth-child(4) p {
     display: flex;
-    gap: 10px;
+    gap: 5px;
+  }
+  .row div:nth-child(4) h4 {
+    margin-bottom: 10px;
+  }
+  .icon-footer {
+    width: 40%;
   }
 }
