--- a/packages/client/src/components/Product/ProductView/ProductViewDescription/ProductViewDescription.styles.css
+++ b/packages/client/src/components/Product/ProductView/ProductViewDescription/ProductViewDescription.styles.css
@@ -1,3 +1,11 @@
 .product-view-description {
-  grid-column: 9 / span 4;
+  grid-column: 5 / span 5;
+}
+
+@media only screen and (max-width: 576px) {
+  .product-view-description {
+    grid-column: 1 / span 7;
+    margin-top: 10px;
+    font-size: 16px;
+  }
 }
