--- a/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
+++ b/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
@@ -13,3 +13,13 @@
 .go-back-button button svg {
   font-size: 30px;
 }
+@media only screen and (max-width: 576px) {
+  .go-back-button {
+    font-size: 20px;
+    margin-bottom: 14px;
+  }
+  .go-back-button button svg {
+    font-size: 10px;
+    color: rgba(33, 33, 33, 0.8);
+  }
+}
