--- a/packages/client/src/components/Product/ProductView/ProductViewWrapper/ProductViewWrapper.styles.css
+++ b/packages/client/src/components/Product/ProductView/ProductViewWrapper/ProductViewWrapper.styles.css
@@ -1,6 +1,14 @@
 .product-wrapper {
   margin-top: 58px;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+
   column-gap: 24px;
+}
+
+@media only screen and (max-width: 576px) {
+  .product-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 14px;
+  }
 }
