--- a/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
+++ b/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
@@ -5,6 +5,16 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   color: #212121;
   font-family: 'Montserrat';
-  font-size: 32px;
+  font-size: 2em;
   font-weight: 600;
+}
+
+@media only screen and (max-width: 576px) {
+  .view-page-button {
+    grid-column: 1 / span 7;
+    width: 217px;
+    height: 52px;
+    font-size: 24px;
+    padding: 11px 22px;
+  }
 }
