--- a/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
+++ b/packages/client/src/components/ViewPageButton/ViewPageButton.styles.css
@@ -5,7 +5,7 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   color: #212121;
   font-family: 'Montserrat';
-  font-size: 2em;
+  font-size: 32px;
   font-weight: 600;
 }
 
