--- a/packages/client/src/containers/ProductListDropDown/ProductListDropDown.style.css
+++ b/packages/client/src/containers/ProductListDropDown/ProductListDropDown.style.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  background-color: rgba(228, 193, 177, 1);
+  padding: 20px 0;
   justify-content: space-around;
 }
 
