--- a/packages/client/src/components/ProductList/ProductList.component.css
+++ b/packages/client/src/components/ProductList/ProductList.component.css
@@ -4,12 +4,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-.collection-page-container {
-  background-color: #ececec;
-  margin: auto;
-  width: 1512px;
-}
+
 .product-list-container {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 413px;
   background-color: rgba(228, 193, 177, 1);
   margin-bottom: 50px;
 }
@@ -24,17 +25,17 @@
   height: 433px;
   margin: 15px 10px;
 }
-.product img {
+/* .product img {
   object-fit: cover;
   width: 100%;
   height: 333px;
-}
-.product p {
+} */
+/* .product p {
   color: black;
   text-align: left;
   padding: 10px;
   font-family: Montserrat;
-}
+} */
 @media only screen and (max-width: 1200px) {
   .collection-page-container {
     margin: auto;
@@ -46,9 +47,6 @@
   .product {
     width: 303px;
     height: 403px;
-  }
-  .product img {
-    height: 303px;
   }
 }
 @media only screen and (max-width: 992px) {
@@ -62,9 +60,6 @@
   .product {
     width: 233px;
     height: 333px;
-  }
-  .product img {
-    height: 233px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -80,9 +75,6 @@
     height: 393px;
     margin: 10px 10px;
   }
-  .product img {
-    height: 293px;
-  }
 }
 @media only screen and (max-width: 600px) {
   .collection-page-container {
@@ -96,8 +88,5 @@
     width: 233px;
     height: 333px;
     margin: 10px 10px;
-  }
-  .product img {
-    height: 233px;
   }
 }
