--- a/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
+++ b/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
@@ -4,7 +4,7 @@
   margin-top: 40px;
 }
 
-.related-products {
+.related-items-display {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
