--- a/packages/client/src/components/Product/ProductView/ProductContainer/ProductContainer.styles.css
+++ b/packages/client/src/components/Product/ProductView/ProductContainer/ProductContainer.styles.css
@@ -1,6 +1,12 @@
 .product-container {
   margin: 0 auto;
-  max-width: 1140px;
+  max-width: 800px;
+}
+
+@media screen and (max-width: 768px) {
+  .product-container {
+    max-width: 90%;
+  }
 }
 
 @media only screen and (max-width: 576px) {
