--- a/packages/client/src/components/ProductListDropDown/ProductListDropDown.style.css
+++ b/packages/client/src/components/ProductListDropDown/ProductListDropDown.style.css
@@ -1,7 +1,7 @@
 .view-dropdown-select {
   margin-top: 19px;
-  width: 331px;
-  padding: 23px 12px 27px 12px;
+  width: 290px;
+  padding: 13px 0x 17px 0px;
   font-size: 24px;
   font-weight: 600;
   color: #212121cc;
