--- a/packages/client/src/components/Product/ProductView/ProductViewDescription/ProductViewDescription.styles.css
+++ b/packages/client/src/components/Product/ProductView/ProductViewDescription/ProductViewDescription.styles.css
@@ -1,7 +1,13 @@
 .product-view-description {
-  grid-column: 5 / span 5;
+  grid-column: 3 / span 6;
 }
 
+@media screen and (max-width: 768px) {
+  .product-view-description {
+    justify-content: center;
+    height: fit-content;
+  }
+}
 @media only screen and (max-width: 576px) {
   .product-view-description {
     grid-column: 1 / span 7;
