--- a/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
+++ b/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
@@ -8,9 +8,18 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  margin: 25px 35px;
+  margin: 25px 0px;
 }
 
 .realtedItems-heading {
-  margin: 25px 35px;
+  margin: 17px 0px;
+}
+.product-card-wrapper {
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 578px) {
+  .related-items-display {
+    margin: 0px 0px;
+  }
 }
