--- a/packages/client/src/containers/Login.container/Login.css
+++ b/packages/client/src/containers/Login.container/Login.css
@@ -97,6 +97,14 @@ main {
   font-family: 'Montserrat';
   padding: 0;
 }
+.form-erros {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 100;
+  line-height: 100%;
+  font-family: 'Montserrat';
+  color: red;
+}
 
 .signup-submit-button {
   background-color: #f5f5f5;
