--- a/packages/client/src/containers/Login.container/Login.css
+++ b/packages/client/src/containers/Login.container/Login.css
@@ -20,6 +20,7 @@ main {
 
 .signup-section * {
   margin-top: 2rem;
+  background-color: #f2ebe7;
 }
 
 .signup-text {
@@ -87,6 +88,11 @@ main {
   color: #212121;
 }
 
+.signup-form input {
+  height: 30px;
+  padding-left: 7px;
+}
+
 .signup-form__fullname,
 .signup-form__email,
 ::placeholder {
@@ -97,13 +103,12 @@ main {
   font-family: 'Montserrat';
   padding: 0;
 }
+
 .form-erros {
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 100;
-  line-height: 100%;
-  font-family: 'Montserrat';
+  font-size: 0.75rem;
+  font-weight: bold;
   color: red;
+  border: none;
 }
 
 .signup-submit-button {
