--- a/packages/client/src/components/Cart/CartButtons/CartButtons.styles.css
+++ b/packages/client/src/components/Cart/CartButtons/CartButtons.styles.css
@@ -1,5 +1,12 @@
-.view-page-button {
-  grid-column: 2 / span 6;
-  font-size: 20px;
-  align-items: right;
+.cart-buttons-wrapper {
+  margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.cart-buttons {
+  grid-column: 7 / span 11;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
