--- a/packages/client/src/components/Cart/CartCount/CartCount.styles.css
+++ b/packages/client/src/components/Cart/CartCount/CartCount.styles.css
@@ -1,8 +1,6 @@
 .cart-count {
-  font-size: 20px;
+  margin-bottom: 30px;
   text-align: left;
-  grid-column: 1 / span 6;
+  font-size: 24px;
   font-weight: 600;
-  margin-top: 20px;
-  color: rgba(33, 33, 33, 1);
 }
