--- a/packages/client/src/components/Cart/CartTable/CartTable.styles.css
+++ b/packages/client/src/components/Cart/CartTable/CartTable.styles.css
@@ -1,16 +1,43 @@
-.cart-table-wrapper {
-  grid-column: 1 / span 12;
-}
-.cart-table {
-  /* border: 2px solid black; */
-  /* display: flex; */
-  grid-column: 2 / span 12;
-  display: flex;
-  justify-content: space-between;
-  margin-left: 104px;
-  margin-top: 24px;
+.cart-table-headers {
+  margin-bottom: 10px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  text-align: left;
+  font-size: 16px;
+  font-weight: 600;
 }
 
-/* .cart-table-result product {
-  /* display: flex; 
-} */
+.cart-table-blank {
+  grid-column: 1 / span 1;
+}
+
+.cart-table-desc {
+  grid-column: 2 / span 3;
+}
+
+.cart-table-amount {
+  grid-column: 5 / span 2;
+}
+
+.cart-table-quantity {
+  grid-column: 7 / span 2;
+}
+
+.cart-table-total {
+  grid-column: 9 / span 2;
+}
+
+.cart-table-action {
+  grid-column: 11 / span 2;
+}
+
+.cart-table-products {
+  padding: 20px 0;
+  border-top: 2px solid #212121;
+  border-bottom: 2px solid #212121;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  font-size: 16px;
+  font-weight: 400;
+}
