--- a/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
+++ b/packages/client/src/components/shared/GoBackButton/GoBackButton.styles.css
@@ -3,15 +3,15 @@
   align-items: center;
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 600;
   color: rgba(33, 33, 33, 0.8);
 }
 .go-back-button:hover {
   cursor: pointer;
 }
-.go-back-button button svg {
-  font-size: 30px;
+.go-back-button img {
+  width: 30px;
 }
 @media only screen and (max-width: 576px) {
   .go-back-button {
