--- a/packages/client/src/components/ProductCard/ProductCard.styles.css
+++ b/packages/client/src/components/ProductCard/ProductCard.styles.css
@@ -1,28 +1,32 @@
 * {
+  margin: 0;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
 
 .product-card-wrapper {
-  width: 333px;
+  width: 255px;
 }
 
 .product-img-wrapper {
   position: relative;
-  height: 333px;
+}
+.product-img {
+  height: 233px;
 }
 
 .cart-favorite-wrapper {
   position: absolute;
   top: 10px;
-  right: 5px;
+  right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 100px;
-  width: 55px;
+  height: 90px;
+  width: 40px;
   border: 1px solid black;
-  border-radius: 16px;
+  border-radius: 12px;
 }
 
 .cart-favorite-wrapper img {
@@ -34,28 +38,55 @@
   text-align: start;
 }
 
-p {
-  margin: 0;
-  font-size: 24px;
-  font-weight: bold;
+p,
+h2 {
+  margin-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .price-rate-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 20px;
+  width: 240px;
 }
 .product-price-wrapper p {
   display: inline-block;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-top: 10px;
 }
 
 .product-rate-wrapper {
   display: flex;
   align-items: center;
 }
-
-.rate-wrapper img {
-  width: 36px;
+.product-rate-wrapper p {
+  font-size: 20px;
+}
+.product-rate-wrapper img {
+  width: 25px;
+}
+@media screen and (max-width: 768px) {
+  .product-card-wrapper {
+    width: 220px;
+  }
+  .product-img {
+    height: 220px;
+  }
+  .cart-favorite-wrapper {
+    right: 10px;
+  }
+  .product-title {
+    padding-top: 15px;
+  }
+  .price-rate-wrapper {
+    width: 220px;
+  }
+  .product-price-wrapper p {
+    font-size: 20px;
+  }
+  .product-rate-wrapper img {
+    width: 23px;
+  }
 }
