--- a/packages/client/src/components/ProductListDropDown/DropDownViewList/DropDownViewList.style.css
+++ b/packages/client/src/components/ProductListDropDown/DropDownViewList/DropDownViewList.style.css
@@ -5,44 +5,23 @@
 }
 
 .list-view {
+  margin: auto;
+  width: 850px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   background-color: #e4c1b1;
-  padding: 24px 72px;
-}
-
-@media only screen and (max-width: 1200px) {
-  .list-view {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 10px 25px;
-  }
-}
-
-@media only screen and (max-width: 992px) {
-  .list-view {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 10px;
-  }
+  margin-bottom: 50px;
 }
 
 @media only screen and (max-width: 768px) {
   .list-view {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px;
+    width: 480px;
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 480px) {
   .list-view {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    width: 480px;
   }
 }
