--- a/packages/client/src/containers/HomePage/HomePage.styles.css
+++ b/packages/client/src/containers/HomePage/HomePage.styles.css
@@ -39,19 +39,6 @@
   margin: 30px 0;
 }
 
-.footer {
-  width: 100%;
-}
-
-/*.footer-container-main {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: #e4c1b1;
-}*/
-
 @media screen and (max-width: 768px) {
   .header,
   .body,
@@ -62,6 +49,9 @@
   .navigation {
     width: 95%;
     margin: 10px 0;
+  }
+  .homepage-container {
+    padding-bottom: 235px;
   }
 }
 
@@ -76,6 +66,10 @@
   .divider-container {
     height: 20px;
     background-color: #ebe4e1;
+  }
+
+  .homepage-container {
+    padding-bottom: 415px;
   }
 
   h1 {
