--- a/packages/client/src/components/ProductReviews/ProductReviews.styles.css
+++ b/packages/client/src/components/ProductReviews/ProductReviews.styles.css
@@ -1,7 +1,11 @@
 .product-reviews-wrapper {
   display: flex;
-  flex-flow: column wrap;
-  width: 600px;
+  flex-direction: column;
+}
+
+.product-reviews-wrapper h1 {
+  font-size: 22px;
+  margin-bottom: 30px;
 }
 
 .readMore-reviews {
@@ -9,10 +13,19 @@
   border: 0px;
   padding: 0px;
   text-align: left;
-  font-weight: 300;
-  font-size: 22px;
+  font-weight: 600;
+  font-size: 16px;
+  color: rgba(33, 33, 33, 0.8);
 }
 
 .readMore-reviews:hover {
   cursor: pointer;
+}
+
+@media only screen and (max-width: 576px) {
+  .product-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 14px;
+  }
 }
