--- a/packages/client/src/components/Body/Body.styles.css
+++ b/packages/client/src/components/Body/Body.styles.css
@@ -1,14 +1,16 @@
 .main {
   background-color: #e4c1b1;
+  display: flex;
+  flex-direction: column;
 }
 
 .shop-our-collections {
-  width: 343px;
+  width: 100%;
   font-family: 'Montserrat';
   color: #212121;
   font-weight: 700;
-  size: 32px;
-  line-height: 39px;
+  size: 2rem;
+  line-height: 2.1rem;
   text-align: Center;
 }
 
@@ -76,15 +78,16 @@
 }
 
 .shopnow-button {
-  width: 186px;
-  height: 66px;
+  width: 10rem;
+  height: 2.8rem;
   background-color: #f5f5f5;
   border: none;
-  border-radius: 100px;
-  margin-top: 64px;
-  margin-bottom: 47px;
+  border-radius: 6.25rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
   font-family: 'Poppins';
   font-weight: 700;
-  size: 24px;
-  line-height: 36px;
+  size: 1.5rem;
+  line-height: 2.25rem;
+  margin-left: 40%;
 }
