--- a/packages/client/src/components/ProductCard/ProductCard.styles.css
+++ b/packages/client/src/components/ProductCard/ProductCard.styles.css
@@ -5,20 +5,25 @@
 }
 
 .product-card-wrapper {
-  width: 255px;
+  width: 250px;
+  background-color: rgba(206, 160, 134, 1);
+  border-radius: 50px;
+  padding: 10px 0 25px 0;
 }
 
 .product-img-wrapper {
   position: relative;
 }
+
 .product-img {
   height: 233px;
+  border-radius: 50px;
 }
 
 .cart-favorite-wrapper {
   position: absolute;
   top: 10px;
-  right: 20px;
+  right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,16 +77,18 @@ h2 {
     width: 220px;
   }
   .product-img {
-    height: 220px;
+    height: 200px;
   }
   .cart-favorite-wrapper {
-    right: 10px;
+    right: 25px;
+    height: 70px;
   }
   .product-title {
     padding-top: 15px;
   }
   .price-rate-wrapper {
     width: 220px;
+    padding-right: 5px;
   }
   .product-price-wrapper p {
     font-size: 20px;
