--- a/packages/client/src/components/ProductListDropDown/DropDownView/DropDownView.style.css
+++ b/packages/client/src/components/ProductListDropDown/DropDownView/DropDownView.style.css
@@ -9,9 +9,16 @@
   padding: 18px 12px 18px 12px;
   font-size: 18px;
   font-weight: 650;
+  position: relative;
   color: #212121cc;
-  background-color: #e4c1b1;
 }
+
+.all-filters {
+  background: url('../../../assets/all-flter-icon.svg') no-repeat;
+  background-position: right 10px top 50%;
+  appearance: none;
+}
+
 @media only screen and (max-width: 768px) {
   .view-dropdown-select {
     width: 90%;
