style(navbar): change color for active link

--- a/packages/client/src/components/Navigation/Navigation.styles.css
+++ b/packages/client/src/components/Navigation/Navigation.styles.css
@@ -19,7 +19,9 @@
 .nav > span {
   color: black;
 }
-a.home {
+.nav a.active {
+  text-decoration: none;
+  font-weight: bold;
   color: black;
 }
 .nav-buttons .login {
