--- a/packages/client/src/components/ProductList/ProductList.component.css
+++ b/packages/client/src/components/ProductList/ProductList.component.css
@@ -12,12 +12,12 @@
   margin-bottom: 50px;
 }
 .rendered-product {
-  justify-content: center;
+  justify-content: flex-start;
   display: flex;
   flex-wrap: wrap;
 }
 .product {
-  margin: 10px 10px;
+  margin: 10px 14px;
 }
 
 @media screen and (max-width: 768px) {
