--- a/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
+++ b/packages/client/src/containers/RelatedItems/RelatedItems.styles.css
@@ -7,7 +7,8 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  margin: 25px 0px;
+  position: relative;
 }
 
 .related-items-display h2,
@@ -16,37 +17,21 @@
   font-weight: 600;
 }
 
-.related-items-display > div {
-  margin-bottom: 30px;
-}
-
-.relatedItems-heading {
-  margin-bottom: 30px;
-  font-size: 22px;
-}
-
-.related-items-back {
+.back-carousel {
   position: absolute;
-  top: 37%;
-  left: 0;
-  transform: translateY(-50%);
-  z-index: 1000;
+  top: 140px;
+  left: 3px;
+  z-index: 1;
 }
 
-.related-items-forward {
+.after-Carousel {
   position: absolute;
-  top: 37%;
-  right: 0;
-  transform: translateY(-50%);
-  z-index: 1000;
+  top: 140px;
+  right: 3px;
+  z-index: 1;
 }
 
-@media only screen and (max-width: 576px) {
-  .related-items {
-    margin-bottom: 30px;
-    order: 3;
-  }
-
+@media only screen and (max-width: 578px) {
   .related-items-display {
     width: 100%;
     flex-direction: column;
