--- a/packages/client/src/containers/ContactUs.styles.css
+++ b/packages/client/src/containers/ContactUs.styles.css
@@ -78,7 +78,20 @@ form {
   line-height: 15px;
   font-family: 'Montserrat';
 }
-.contactUs-btn {
+.contactUs-btn:disabled {
+  width: 408px;
+  height: 45px;
+  border: 1px solid #c02222;
+  border-radius: 8px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 35px;
+  margin-bottom: 25px;
+}
+.contactUs-btn:enabled {
   width: 408px;
   height: 45px;
   background: #f5f5f5;
@@ -91,6 +104,7 @@ form {
   line-height: 29px;
   margin-top: 35px;
   margin-bottom: 25px;
+  cursor: pointer;
 }
 
 .media-icons {
@@ -141,7 +155,8 @@ form {
     margin-left: 8px;
     margin-top: 90px;
   }
-  .contactUs-btn,
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled,
   .contactUs-input,
   .fashion-email {
     width: 350px;
@@ -151,7 +166,8 @@ form {
   }
   .fashion-email p,
   p,
-  .contactUs-btn {
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled {
     font-size: 15px;
   }
 }
@@ -168,7 +184,8 @@ form {
     margin-left: 8px;
     margin-top: 50px;
   }
-  .contactUs-btn,
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled,
   .contactUs-input,
   .fashion-email {
     width: 350px;
@@ -178,7 +195,8 @@ form {
   }
   .fashion-email p,
   p,
-  .contactUs-btn {
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled {
     font-size: 15px;
   }
 }
@@ -195,7 +213,8 @@ form {
     margin-left: 8px;
     margin-top: 40px;
   }
-  .contactUs-btn,
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled,
   .contactUs-input,
   .fashion-email {
     width: 180px;
@@ -205,7 +224,8 @@ form {
   }
   .fashion-email p,
   p,
-  .contactUs-btn {
+  .contactUs-btn:disabled,
+  .contactUs-btn:enabled {
     font-size: 8px;
   }
   .fashion-email img,
