--- a/packages/client/src/containers/HomePage/HomePage.styles.css
+++ b/packages/client/src/containers/HomePage/HomePage.styles.css
@@ -36,22 +36,8 @@
 .body,
 .newsletter {
   width: 800px;
-  /*border: 1px solid red;*/
   margin: 30px 0;
 }
-
-.footer {
-  width: 100%;
-}
-
-/*.footer-container-main {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: #e4c1b1;
-}*/
 
 @media screen and (max-width: 768px) {
   .header,
@@ -63,6 +49,9 @@
   .navigation {
     width: 95%;
     margin: 10px 0;
+  }
+  .homepage-container {
+    padding-bottom: 235px;
   }
 }
 
@@ -77,6 +66,10 @@
   .divider-container {
     height: 20px;
     background-color: #ebe4e1;
+  }
+
+  .homepage-container {
+    padding-bottom: 415px;
   }
 
   h1 {
