--- a/packages/client/src/components/ProductReviews/DisplayReviews/DisplayReviews.styles.css
+++ b/packages/client/src/components/ProductReviews/DisplayReviews/DisplayReviews.styles.css
@@ -1,4 +1,5 @@
 .reviewer-wrapper {
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   gap: 30px;
@@ -50,7 +51,10 @@
 }
 
 .review-description {
-  margin: 10px 0px;
+  margin-bottom: 20px;
+}
+
+.reviewer-description p {
   font-size: 16px;
   font-weight: 500;
 }
