--- a/packages/client/src/components/ProductReviews/ProductReviews.styles.css
+++ b/packages/client/src/components/ProductReviews/ProductReviews.styles.css
@@ -16,3 +16,10 @@
 .readMore-reviews:hover {
   cursor: pointer;
 }
+
+.reviewBtn {
+  border: none;
+  text-align: left;
+  background-color: rgba(228, 193, 177, 1);
+  margin-bottom: 13px;
+}
