fix(CategoriesListDropDown): fix bg-color and margin

--- a/packages/client/src/components/CategoriesListDropDown/CategoriesListDropDown.style.css
+++ b/packages/client/src/components/CategoriesListDropDown/CategoriesListDropDown.style.css
@@ -11,6 +11,7 @@
   font-weight: 650;
   position: relative;
   color: #212121cc;
+  background-color: inherit;
 }
 .all-filters {
   background: url('../../assets/all-filter-icon.svg') no-repeat;
