changed pages/containers using FormInput components

--- a/packages/client/src/containers/ContactUs.styles.css
+++ b/packages/client/src/containers/ContactUs.styles.css
@@ -18,7 +18,7 @@
   background: #f2ebe7;
 }
 .contact-info h3 {
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   font-size: 24px;
   text-align: left;
   line-height: 29px;
