--- a/packages/client/src/components/Input/FormInput.style.css
+++ b/packages/client/src/components/Input/FormInput.style.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background: #f2ebe7;
+  width: 100%;
 }
 
 .form-input {
@@ -12,7 +13,7 @@
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   margin-top: 1rem;
   margin-bottom: 1rem;
-  width: 25rem;
+  width: 100%;
   height: 2rem;
   background: #f2ebe7;
   text-align: start;
@@ -22,7 +23,7 @@
 
 .form-input::placeholder {
   padding-left: 0;
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1rem;
