--- a/packages/client/src/containers/ShoppingCartPage/ShoppingCartPage.styles.css
+++ b/packages/client/src/containers/ShoppingCartPage/ShoppingCartPage.styles.css
@@ -15,3 +15,15 @@
   height: 200px;
   background-color: #ececec;
 }
+
+@media screen and (max-width: 768px) {
+  .shopping-cart-container {
+    max-width: 90%;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .shopping-cart-container {
+    max-width: 90%;
+  }
+}
