--- a/packages/client/src/containers/FavoritesPage/FavoritesPage.style.css
+++ b/packages/client/src/containers/FavoritesPage/FavoritesPage.style.css
@@ -4,12 +4,11 @@
   box-sizing: border-box;
 }
 
-.list-view {
+.favorite-list-view {
   margin: 50px auto;
   width: 850px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  flex-direction: column;
   background-color: #e4c1b1;
 }
 
