--- a/packages/client/src/components/Navigation/Navigation.styles.css
+++ b/packages/client/src/components/Navigation/Navigation.styles.css
@@ -1,11 +1,19 @@
 .nav {
   margin: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #ebe4e1;
 }
-
+.nav,
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.links .home,
+.about-us,
+.collections,
+.contact-us {
+  margin-right: 20px;
+}
 .nav * {
   text-decoration: none;
   font-family: 'Montserrat';
@@ -56,6 +64,18 @@
   border-radius: 100px;
   white-space: nowrap;
 }
+button {
+  border: none;
+  background: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+.navigation .nav #links-mobile {
+  display: flex;
+}
+.mobile-menu-icon {
+  display: none;
+}
 
 @media screen and (max-width: 768px) {
   .nav * {
@@ -63,25 +83,47 @@
     line-height: 1;
   }
 }
-
-@media screen and (max-width: 480px) {
-  .nav {
-    flex-direction: column;
+@media screen and (max-width: 670px) {
+  .navigation .nav {
+    display: block;
   }
-  .nav span,
-  .nav a {
-    margin-top: 8px;
-    font-size: 16px;
+  .navbar-brand {
+    position: absolute;
+    left: 10px;
+    top: 10px;
   }
-
-  .nav-buttons {
-    margin-top: 8px;
+  .navigation .nav .links {
+    display: none;
+  }
+  .mobile-menu-icon {
+    display: flex;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
+  .navigation .nav #links-mobile {
+    width: 100%;
+    background-color: #ebe4e1;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-top: 1px solid rgb(212, 194, 194);
   }
-  .logged-in-container {
-    margin-top: 5px;
+  .nav-buttons {
+    display: flex;
     flex-direction: column;
-    gap: 5px;
+    margin-right: 20px;
+  }
+  .nav-buttons .login {
+    padding-bottom: 10px;
+  }
+  .navigation .nav #links-mobile a {
+    line-height: 30px;
+  }
+  .navigation-container {
+    padding-bottom: 15px;
   }
 }
