--- a/packages/client/src/components/CategoriesListDropDown/CategoriesListDropDown.style.css
+++ b/packages/client/src/components/CategoriesListDropDown/CategoriesListDropDown.style.css
@@ -18,6 +18,7 @@
   background: url('../../assets/all-filter-icon.svg') no-repeat;
   background-position: right 10px top 50%;
   appearance: none;
+  background-color: rgba(228, 193, 177, 1);
 }
 
 @media only screen and (max-width: 768px) {
