fix(Hamburger responsive navigation): added icons from iteration file

--- a/packages/client/src/components/Navigation/Navigation.styles.css
+++ b/packages/client/src/components/Navigation/Navigation.styles.css
@@ -97,9 +97,12 @@ button {
   }
   .mobile-menu-icon {
     display: flex;
+  }
+  .icon-hamburger {
+    width: 25px;
     position: absolute;
     right: 10px;
-    top: 10px;
+    top: 5px;
   }
   .navigation .nav #links-mobile {
     width: 100%;
