style(dynamic navigation):added styling to login icons

--- a/packages/client/src/components/Navigation/Navigation.styles.css
+++ b/packages/client/src/components/Navigation/Navigation.styles.css
@@ -56,7 +56,14 @@
   border-radius: 100px;
   white-space: nowrap;
 }
-
+.icon-login {
+  width: 20px;
+}
+.logged-in-text {
+  display: flex;
+  gap: 10px;
+  padding-top: 5px;
+}
 @media screen and (max-width: 768px) {
   .nav * {
     font-size: 12px;
