--- a/packages/client/src/components/Cart/CartSelectedProduct/CartSelectedProduct.styles.css
+++ b/packages/client/src/components/Cart/CartSelectedProduct/CartSelectedProduct.styles.css
@@ -60,55 +60,62 @@
 
 .check-mark img {
   width: 20px;
-  /* visibility: hidden; */
 }
 
-[type='checkbox'] + label {
-  content: '';
-}
-
-input[type='checkbox'] + label::before {
-  content: '';
+[type='checkbox'] {
   width: 20px;
   height: 20px;
-  position: relative;
+  vertical-align: middle;
   -webkit-appearance: none;
-  display: inline-block;
-  transform: scale(1);
-  opacity: 0;
-}
-
-input[type='checkbox']:checked + label::before {
-  content: '';
-  top: 0;
-  left: -10px;
+  background: none;
+  border: 0;
+  outline: 0;
+  flex-grow: 0;
+  background-color: white;
+  transition: background 300ms;
   cursor: pointer;
-  background-image: url(../../../assets/check-mark.png);
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: 20px;
-  height: 20px;
-  width: 20px;
-  padding: 0px;
-  opacity: 1;
+  margin-left: 15px;
 }
 
-input[type='checkbox'] {
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: rgba(245, 245, 245, 1);
-  margin: 0;
-  font: inherit;
-  width: 20px;
-  height: 20px;
-  border: none;
-  margin-left: 15px;
-  border: 3px solid black;
+[type='checkbox']::before {
+  content: '';
+  color: transparent;
+  display: block;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  border: 0;
+  background-color: transparent;
+  background-size: contain;
+  box-shadow: inset 0 0 0 2px rgba(67, 67, 67, 1);
   border-radius: 3px;
 }
 
-@media only screen and (max-width: 578px) {
-  .cart-selected-wrapper {
-    width: 90%;
+/* Checked */
+[type='checkbox']:checked {
+  background-color: white;
+}
+
+[type='checkbox']:checked::before {
+  box-shadow: none;
+  background-image: url(../../../assets/check-mark.png);
+}
+
+@media screen and (max-width: 768px) {
+  .removeBtn img {
+    width: 17px;
+  }
+  [type='checkbox'] {
+    width: 18px;
+    height: 18px;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .cart-table-headers {
+    font-size: 12px;
+    padding-left: 0;
+    gap: 20px;
   }
 }
