fix(ProductCard): link on title

--- a/packages/client/src/components/ProductCard/ProductCard.styles.css
+++ b/packages/client/src/components/ProductCard/ProductCard.styles.css
@@ -9,11 +9,10 @@
   background-color: rgba(206, 160, 134, 1);
   border-radius: 50px;
   padding: 10px 0 25px 0;
-  color: inherit;
-  text-decoration: none;
 }
 
-.product-card-wrapper:visited {
+.product-title-link,
+.product-title-link:visited {
   color: inherit;
   text-decoration: none;
 }
